# Datacern_AI_V0.1

./: Makefile  README.md
.github/workflows/: cd-aws.yml  cd-azure.yml  cd-gcp.yml  ci.yml  security-scan.yml
deploy/: CONFIG.md  docker-compose.dev.yml  services.yaml
deploy/demo/: brd60_external_agent.py
deploy/e2e/: boot_services.sh  config.env  driver.py  pyproject.toml  run.sh  seed.sh
deploy/local/: doctor.sh  down.sh  keycloak_bootstrap.sh  reconcile.py  reconcile_cases.py  reset.sh  restart_agent_runtime.sh  restart_bff.sh  restart_experiment.sh  restart_identity_oidc.sh  (+8 more)
docs/: DATACERN_REALTIME_HEALTHCARE_POSITION.md  README.md
packs/: .multitenant_state.json  DEEP_PACK_AUTHORING_ADDENDUM.md  MULTITENANT_LOGINS.md  PACK_AUTHORING_GUIDE.md  cleanup_pack_tenants.py  demo.sh  install_new_wave.sh  install_packs_multitenant.py  onboard_pack_tenant.py  retry_failed_wave.sh
security/: run_baseline_scan.sh
services/pack-service/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/pack-service/app/: config.py  main.py  registration.py
services/pack-service/app/api/: auth.py  errors.py  middleware.py
services/pack-service/app/api/routes/: health.py  installs.py  packs.py
services/pack-service/app/domain/: catalog.py  errors.py  installer.py
services/pack-service/app/store/: db.py  repo.py
services/pack-service/migrations/: env.py
services/pack-service/migrations/versions/: 0001_initial.py  0002_install_lifecycle.py
services/pack-service/tests/: test_pack_service.py
services/pack-service/tests/unit/: test_pack_service.py
(+1351 files in other folders)
